--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
-img {
-  border: 1px solid #444;
+<style>
+.h3{
+    color: #ffbf00;
+    font-weight:700;
+    font-size: 20px;
+    letter-spacing: 1px;
 }
+</style>
 
-@font-face {
-  font-family: InputMonoCondensed;
-  src: url(...) format("WOFF2");
-}
-
-h1,h2,h3,h4,h5,h6 {
-  font-family: InputMonoCondensed;
-}
+<div class="green">
+    Markdown css styles
+</div>
